fix scroll wrap

--- a/public/assets/css/styles_main.css
+++ b/public/assets/css/styles_main.css
@@ -37,16 +37,16 @@ body {
 .messagesList {
   padding-left: 0.5em;
   border-right: 0.5em;
-  display: flex;
   border-bottom: 3px solid black;
 }
 .messages {
   position: relative;
-  overflow-x: hidden;
+  overflow-x: auto;
 }
 .ulList {
   list-style-type: none;
   padding: 0.3em;
+  margin: 0;
 }
 
 .li-identify {
